--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>coldrain Song Sort</title>
-<!-- Force desktop mode on mobile -->
+<title>BMcord Mod Sorter</title>
 <meta name="viewport" content="width=1024">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -20,19 +19,37 @@ body {
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
   color: #f5f5f5;
-  background: linear-gradient(-45deg, #00132a, #002466, #3a0000, #3a3a00, #003399, #001f4d);
+
+  /* Dark red animated gradient */
+  background: linear-gradient(-45deg, #0d0000, #1a0000, #330000, #4d0000, #660000, #800000);
   background-size: 600% 600%;
-  animation: gradientShift 40s ease infinite;
-  
+  animation: gradientShift 35s linear infinite;
+
   /* Force desktop width and allow horizontal scroll */
   overflow-x: auto;
   min-width: 1024px;
+  position: relative;
 }
 
 @keyframes gradientShift {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
+}
+
+/* ---------------- Floating BM icons ---------------- */
+.floating-icon {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  opacity: 0.15;
+  pointer-events: none;
+  animation: floatIcon linear infinite;
+}
+
+@keyframes floatIcon {
+  0% { transform: translateY(100vh) translateX(0) rotate(0deg); }
+  100% { transform: translateY(-100px) translateX(200px) rotate(360deg); }
 }
 
 /* ---------------- Menubar ---------------- */
@@ -46,17 +63,17 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(15,15,40,0.6);
+  background: rgba(25,0,0,0.6);
   backdrop-filter: blur(12px);
-  border-bottom: 1px solid rgba(255,255,255,0.2);
+  border-bottom: 1px solid rgba(120,0,0,0.2);
   z-index: 100;
   font-weight: 600;
   transition: all 0.3s ease;
 }
 
 #menubar:hover {
-  background: rgba(15,15,40,0.75);
-  border-bottom-color: rgba(255,200,150,0.4);
+  background: rgba(25,0,0,0.75);
+  border-bottom-color: rgba(200,20,20,0.4);
 }
 
 .menu-item {
@@ -65,21 +82,23 @@ body {
   align-items: center;
   justify-content: center;
   padding: 0 12px;
-  border-left: 1px solid rgba(255,255,255,0.2);
+  border-left: 1px solid rgba(120,0,0,0.2);
   transition: all 0.2s ease;
 }
 
 #menu-restart { border-left: none; }
 
 .menu-link { cursor: pointer; color: #fff; text-decoration: none; transition: all 0.2s; }
-.menu-link:hover { color: #ffd780; transform: scale(1.05); }
+.menu-link:hover { color: #ff4d4d; transform: scale(1.05); }
 
 /* ---------------- Table & Fields ---------------- */
 #mainTable {
   border-collapse: collapse;
   margin: 100px auto 20px auto;
   text-align: center;
-  min-width: 1024px; /* force desktop width */
+  min-width: 1024px;
+  position: relative;
+  z-index: 10;
 }
 
 #mainTable td {
@@ -94,15 +113,15 @@ body {
   width: 260px;
   height: 260px;
   border-radius: 12px;
-  background: rgba(15,15,40,0.5);
+  background: rgba(25,0,0,0.5);
   backdrop-filter: blur(12px);
   cursor: pointer;
   transition: all 0.25s ease;
 }
 
 #fldLeft:hover, #fldRight:hover {
-  background: rgba(15,15,40,0.65);
-  box-shadow: 0 8px 24px rgba(255,200,0,0.25), 0 6px 20px rgba(255,50,50,0.25);
+  background: rgba(45,0,0,0.65);
+  box-shadow: 0 8px 24px rgba(255,40,40,0.25), 0 6px 20px rgba(200,20,20,0.25);
   transform: translateY(-2px);
 }
 
@@ -121,7 +140,7 @@ body {
 #fldMiddleT, #fldMiddleB {
   width: 270px;
   border-radius: 12px;
-  background: rgba(15,15,40,0.5);
+  background: rgba(25,0,0,0.5);
   backdrop-filter: blur(12px);
   padding: 12px;
   margin-bottom: 8px;
@@ -133,8 +152,8 @@ body {
 }
 
 #fldMiddleT:hover, #fldMiddleB:hover {
-  background: rgba(15,15,40,0.65);
-  box-shadow: 0 8px 24px rgba(255,200,0,0.25), 0 6px 20px rgba(255,50,50,0.25);
+  background: rgba(45,0,0,0.65);
+  box-shadow: 0 8px 24px rgba(255,40,40,0.25), 0 6px 20px rgba(200,20,20,0.25);
   transform: translateY(-2px);
 }
 
@@ -149,7 +168,7 @@ body {
 /* ---------------- Buttons ---------------- */
 #btn-rawtext, .album-btn {
   cursor: pointer;
-  background: rgba(15,15,40,0.5);
+  background: rgba(25,0,0,0.5);
   backdrop-filter: blur(12px);
   color: #fff;
   border-radius: 12px;
@@ -159,8 +178,8 @@ body {
 }
 
 #btn-rawtext:hover, .album-btn:hover {
-  background: rgba(15,15,40,0.65);
-  box-shadow: 0 8px 24px rgba(255,200,0,0.25), 0 6px 20px rgba(255,50,50,0.25);
+  background: rgba(45,0,0,0.65);
+  box-shadow: 0 8px 24px rgba(255,40,40,0.25), 0 6px 20px rgba(200,20,20,0.25);
   transform: translateY(-2px);
 }
 
@@ -179,7 +198,7 @@ body {
   -webkit-appearance: none;
   width: 18px;
   height: 18px;
-  border: 2px solid rgba(255,255,255,0.6);
+  border: 2px solid rgba(200,0,0,0.6);
   border-radius: 4px;
   background-color: rgba(255,255,255,0.05);
   position: relative;
@@ -187,8 +206,8 @@ body {
 }
 
 .checkbox-wrapper input[type="checkbox"]:checked {
-  background: rgba(255,200,0,0.5);
-  border-color: #ffc000;
+  background: rgba(255,80,0,0.5);
+  border-color: #ff6600;
 }
 
 .checkbox-wrapper input[type="checkbox"]:checked::after {
@@ -210,7 +229,10 @@ body {
   margin: 0 auto;
   overflow-x: auto;
   word-wrap: break-word;
-  min-width: 1024px; /* force desktop width */
+  min-width: 1024px;
+  padding-bottom: 150px; /* Extra space at bottom */
+  position: relative;
+  z-index: 10;
 }
 
 #resultField table, #optTable {
@@ -222,17 +244,17 @@ body {
 #resultField table td, #optTable td {
   padding: 6px;
   text-align: center;
-  border: 1px solid rgba(255,255,255,0.1);
+  border: 1px solid rgba(255,40,40,0.1);
 }
 
 /* ---------------- Links ---------------- */
 a { color: #fff; text-decoration: none; transition: all 0.2s; }
-a:hover { color: #ffd780; }
+a:hover { color: #ff4d4d; }
 
 </style>
 </head>
 
-<body onload="startup()">
+<body onload="startup(); generateFloatingIcons();">
 
 <!-- Menubar -->
 <div id="menubar">
@@ -242,11 +264,8 @@ a:hover { color: #ffd780; }
   <a href="https://github.com/IustinPro/coldrain-song-sorter">
     <div class="menu-item menu-link menu-right"><p>Github</p></div>
   </a>
-  <a href="https://coldrain.jp/">
-    <div class="menu-item menu-link menu-right"><p>coldrain Website</p></div>
-  </a>
-  <a href="https://sakurasort.github.io/">
-    <div class="menu-item menu-link menu-right"><p>Forked From</p></div>
+  <a href="https://discord.gg/babymetal">
+    <div class="menu-item menu-link menu-right"><p>BMcord Website</p></div>
   </a>
 </div>
 
@@ -256,17 +275,17 @@ a:hover { color: #ffd780; }
     <tbody>
       <tr>
         <td id="fldLeft" onclick="fnc_Sort(-1);">
-          <img src="img/bm.png" alt="Left Album">
+          <img src="img/bm.png" alt="Left Mod">
           <div class="songName" id="songLeft"></div>
         </td>
         <td style="width: 60px;"></td>
         <td>
-          <div id="fldMiddleT" onclick="fnc_Sort(0);">coldrain Song Sort</div>
+          <div id="fldMiddleT" onclick="fnc_Sort(0);">BMcord</div>
           <div id="fldMiddleB" onclick="fnc_Undo();">Click to start!</div>
         </td>
         <td style="width: 60px;"></td>
         <td id="fldRight" onclick="fnc_Sort(1);">
-          <img src="img/bm.png" alt="Right Album">
+          <img src="img/bm.png" alt="Right Mod">
           <div class="songName" id="songRight"></div>
         </td>
       </tr>
@@ -299,6 +318,23 @@ a:hover { color: #ffd780; }
 
 <!-- Results Field -->
 <div class="style4" id="resultField" style="text-align:center;"><br></div>
+
+<!-- Floating icons container -->
+<script>
+function generateFloatingIcons() {
+  const count = 20; // number of floating icons
+  for (let i = 0; i < count; i++) {
+    const icon = document.createElement('img');
+    icon.src = 'img/bm.png';
+    icon.className = 'floating-icon';
+    icon.style.left = Math.random() * window.innerWidth + 'px';
+    icon.style.animationDuration = (20 + Math.random()*15) + 's';
+    icon.style.width = (20 + Math.random()*30) + 'px';
+    icon.style.height = 'auto';
+    document.body.appendChild(icon);
+  }
+}
+</script>
 
 </body>
 </html>
