--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@ a:hover { color: #ff4d4d; }
   <div class="menu-item menu-link" id="menu-restart"><p>Restart</p></div>
   <div class="menu-item"><p>Battle Nr. <span id="lblCount">-</span></p></div>
   <div class="menu-item"><p><span id="lblProgress">0</span>% sorted</p></div>
-  <a href="https://github.com/IustinPro/coldrain-song-sorter">
+  <a href="https://github.com/IustinPro/BMcord-Mod-Sorter">
     <div class="menu-item menu-link menu-right"><p>Github</p></div>
   </a>
   <a href="https://discord.gg/babymetal">
-    <div class="menu-item menu-link menu-right"><p>BMcord Website</p></div>
+    <div class="menu-item menu-link menu-right"><p>BMcord</p></div>
   </a>
 </div>
 
